--- a/vnmgr/Rakefile
+++ b/vnmgr/Rakefile
@@ -14,7 +14,7 @@ namespace :db do
 
 		puts "create tables"
 		Sequel.extension :migration
-		Sequel::Migrator.apply(Sequel::DATABASES.first, File.expand_path('../config/db/migrations', __FILE__), 9999)
+		Sequel::Migrator.apply(Sequel::DATABASES.first, File.expand_path('../db/migrations', __FILE__), 9999)
 	end
 
 	task :drop => [] do
@@ -25,6 +25,6 @@ namespace :db do
 		Sequel.connect('mysql://localhost/vnmgr?user=root')
 
 		Sequel.extension :migration
-		Sequel::Migrator.apply(Sequel::DATABASES.first, File.expand_path('../config/db/migrations', __FILE__), 0)
+		Sequel::Migrator.apply(Sequel::DATABASES.first, File.expand_path('../db/migrations', __FILE__), 0)
 	end
 end
