--- a/deployment/conf_files/etc/wakame-vnet/dba.conf
+++ b/deployment/conf_files/etc/wakame-vnet/dba.conf
@@ -1,6 +1,7 @@
-config.redis_host = '192.168.11.54'
-config.redis_port = 6379
-config.db_agent_ip = '127.0.0.1'
-config.db_agent_port = 10000
-config.cluster_name = 'vnmgr'
-config.node_name = 'db_agent'
+redis_host '127.0.0.1'
+redis_port 6379
+db_agent_ip '127.0.0.1'
+db_agent_port 9003
+cluster_name 'vnmgr'
+node_name 'db_agent'
+db_uri 'mysql://localhost/vnmgr?user=root'
