Changed the version of dcell/celluloid related gems.

--- a/vnmgr/Gemfile
+++ b/vnmgr/Gemfile
@@ -7,7 +7,10 @@ gem "rack"
 gem "rack-cors"
 gem "unicorn"
 gem "json"
-gem "dcell"
+gem "celluloid", "0.13.0"
+gem "celluloid-io", "0.13.1"
+gem "celluloid-zmq", "0.13.0"
+gem "dcell", "0.13.0"
 gem "fuguta"
 gem "sequel"
 gem "mysql"
