Modified conf files.

--- a/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
@@ -1,5 +1,4 @@
-redis_host '127.0.0.1'
-redis_port '6379'
-vnmgr_agent_ip '127.0.0.1'
-vnmgr_agent_port '9002'
 cluster_name 'webapi'
+ip '127.0.0.1'
+port '10001'
+storage_backend 'dba'
