--- a/deployment/conf_files/etc/wakame-vnet/dba.conf
+++ b/deployment/conf_files/etc/wakame-vnet/dba.conf
@@ -1,7 +1,5 @@
-redis_host '127.0.0.1'
-redis_port 6379
-db_agent_ip '127.0.0.1'
-db_agent_port 9003
-cluster_name 'vnmgr'
-node_name 'db_agent'
+cluster_name 'database'
+node_name 'agent'
+ip '127.0.0.1'
+port '10000'
 db_uri 'mysql://localhost/vnmgr?user=root'
