Added missing config.

--- a/deployment/conf_files/etc/wakame-vnet/dba.conf
+++ b/deployment/conf_files/etc/wakame-vnet/dba.conf
@@ -3,3 +3,4 @@ node_name 'agent'
 ip '127.0.0.1'
 port '10000'
 db_uri 'mysql://localhost/vnmgr?user=root'
+db_tables [:network, :vif, :dhcp_range, :mac_range, :router, :tunnel, :dc_network, :datapath, :open_flow_controller, :ip_address, :ip_lease]
