Added paper-house to the Gemfile so we can build trema with it. Eventually I want this here only at build time. There's no reason to include it in the rpms.

--- a/vnmgr/Gemfile
+++ b/vnmgr/Gemfile
@@ -16,6 +16,7 @@ gem "sinatra"
 gem "sinatra-contrib"
 gem "unicorn"
 
+gem 'paper-house'
 gem 'rant', '0.5.9'
 gem 'trema', :git=>'http://github.com/axsh/trema.git', :branch=>'wakame-edge'
 
