--- a/vnmgr/spec/config/dba.conf
+++ b/vnmgr/spec/config/dba.conf
@@ -1,7 +1,2 @@
-redis_host '127.0.0.1'
-redis_port 6379
-db_agent_ip '127.0.0.1'
-db_agent_port 9103
-cluster_name 'vnmgr'
-node_name 'db_agent'
-db_uri 'mysql://localhost/vnmgr_test?user=root'
+ip '127.0.0.1'
+port 9103
