Changed mysql gem to mysql2

--- a/vnmgr/Gemfile
+++ b/vnmgr/Gemfile
@@ -7,7 +7,7 @@ gem "celluloid-io", "0.13.1"
 gem "dcell"
 gem "fuguta"
 gem "json"
-gem "mysql"
+gem "mysql2"
 gem "rack"
 gem "rack-cors"
 gem "racket", ">= 1.0.12"
