--- a/deployment/conf_files/etc/wakame-vnet/common.conf
+++ b/deployment/conf_files/etc/wakame-vnet/common.conf
@@ -1,3 +1,10 @@
 redis_host 'localhost'
 redis_port 6379
-db_uri 'mysql2://localhost/vnmgr?user=root'
+db {
+  adapter "mysql2"
+  host "localhost"
+  database "vnmgr"
+  port 3306
+  user "root"
+  password
+}
