--- a/vnmgr/Rakefile
+++ b/vnmgr/Rakefile
@@ -18,6 +18,10 @@ def connect(db_uri)
   Sequel.connect(db_uri)
 end
 
+def get_db_uri(config_dir)
+  Dir.exists?(config_dir) ? load_config(config_dir).db_uri : nil
+end
+
 def load_config(config_dir)
   Vnmgr::Configurations::Vnmgr.load(File.join(config_dir, "common.conf"), File.join(config_dir, "vnmgr.conf"))
 end
@@ -29,7 +33,8 @@ def migrate(db_uri, to = nil)
 end
 
 namespace :db do
-  db_uri = load_config("/etc/wakame-vnet/").db_uri
+  config_dir = "/etc/wakame-vnet/"
+  db_uri = get_db_uri(config_dir)
   task :init => [] do
     migrate(db_uri)
   end
@@ -46,7 +51,8 @@ namespace :db do
 end
 
 namespace :test do
-  db_uri = load_config("spec/config/").db_uri
+  config_dir = "spec/config/"
+  db_uri = get_db_uri(config_dir)
   namespace :db do
     task :init => [] do
       migrate(db_uri)
