Added DHCP service packet handler capable of reading and crafting dummy DHCP messages.

--- a/vnmgr/Gemfile
+++ b/vnmgr/Gemfile
@@ -8,6 +8,7 @@ gem "dcell"
 gem "fuguta"
 gem "json"
 gem "mysql2"
+gem "net-dhcp", ">= 1.1.1"
 gem "rack"
 gem "rack-cors"
 gem "racket", ">= 1.0.12"
