--- a/vnmgr/spec/config/common.conf
+++ b/vnmgr/spec/config/common.conf
@@ -1,3 +1,10 @@
 redis_host 'localhost'
 redis_port 6379
-db_uri 'mysql2://localhost/vnmgr_test?user=root'
+db {
+  adapter "mysql2"
+  host "localhost"
+  database "vnmgr_test"
+  port 3306
+  user "root"
+  password ""
+}
