--- a/deployment/conf_files/etc/wakame-vnet/dba.conf
+++ b/deployment/conf_files/etc/wakame-vnet/dba.conf
@@ -1,2 +1,9 @@
-ip '127.0.0.1'
-port '10000'
+node {
+  id "dba"
+  addr {
+    protocol "tcp"
+    host "127.0.0.1"
+    port 9102
+  }
+}
+actor_names %w(dba)
