--- a/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
@@ -1,6 +1,11 @@
-#node_name "vnmgr"
-#dba_node_name "dba"
-#dba_actor_name "dba"
-ip '127.0.0.1'
-port '10001'
-#data_access_proxy :direct
+node {
+  id "vnmgr"
+  addr {
+    protocol "tcp"
+    host "127.0.0.1"
+    port 9101
+  }
+}
+dba_node_id "dba"
+dba_actor_name "dba"
+data_access_proxy :direct
