--- a/vnmgr/spec/config/common2.conf
+++ b/vnmgr/spec/config/common2.conf
@@ -5,9 +5,9 @@ registry {
 }
 
 db {
-  adapter "mysql2"
+  adapter "mysql"
   host "localhost"
-  database "vnmgr"
+  database "vnmgr_test"
   port 3306
   user "root"
   password ""
