--- a/deployment/conf_files/etc/wakame-vnet/vna.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vna.conf
@@ -1,6 +1,11 @@
-ip '127.0.0.1'
-port '10003'
-#node_name "vna"
-#dba_node_name "dba"
-#dba_actor_name "dba"
-#data_access_proxy :dba
+node {
+  id "vna"
+  addr {
+    protocol "tcp"
+    host "127.0.0.1"
+    port 9103
+  }
+}
+dba_node_id "dba"
+dba_actor_name "dba"
+data_access_proxy :dba
