--- a/vnmgr/spec/config/common.conf
+++ b/vnmgr/spec/config/common.conf
@@ -1,5 +1,9 @@
-redis_host 'localhost'
-redis_port 6379
+registry {
+  adapter "redis"
+  host "127.0.0.1"
+  port 6379
+}
+
 db {
   adapter "mysql2"
   host "localhost"
