Add trema settings

--- a/vnmgr/spec/config/vna.conf
+++ b/vnmgr/spec/config/vna.conf
@@ -6,3 +6,10 @@ node {
     port 19103
   }
 }
+
+dba_node_id "dba"
+dba_actor_name "dba"
+data_access_proxy :dba
+
+trema_home "/opt/axsh/wakame-vnet/vnmgr/vendor/bundle/ruby/1.9.1/bundler/gems/trema-bdf38b482354"
+trema_tmp "/var/run/wakame-vnet"
