Fix error handling

--- a/vnmgr/Rakefile
+++ b/vnmgr/Rakefile
@@ -11,7 +11,8 @@ begin
   require 'rspec/core/rake_task'
   RSpec::Core::RakeTask.new(:spec)
   task :default => :spec
-rescue => LoadError
+rescue LoadError => e
+  # do nothing
 end
 
 def connect(db_uri)
