--- a/deployment/conf_files/etc/wakame-vnet/vna.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vna.conf
@@ -10,4 +10,5 @@ dba_node_id "dba"
 dba_actor_name "dba"
 data_access_proxy :dba
 
-trema_tmp "/var/run/wakame-vnet"
+#trema_tmp "/var/run/wakame-vnet"
+#bridge_name 'br0'
