Change node names

--- a/deployment/conf_files/etc/init/vnet-webapi.conf
+++ b/deployment/conf_files/etc/init/vnet-webapi.conf
@@ -1,11 +1,11 @@
-description "Wakame-VNet: Database agent"
+description "Wakame-VNet: webapi"
 author "axsh Co."
 
 respawn
 respawn limit 5 60
 
-## agent name
-env NAME=dba
+## rack name
+env NAME=webapi
 
 script
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
@@ -20,6 +20,9 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    exec bundle exec ./bin/${NAME} \
+    exec bundle exec unicorn \
+     -o ${BIND_ADDR:-0.0.0.0} \
+     -p ${PORT:-9090} \
+     ./rack/config-${NAME}.ru \
         >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
 end script
