--- a/deployment/conf_files/etc/wakame-vnet/webapi.conf
+++ b/deployment/conf_files/etc/wakame-vnet/webapi.conf
@@ -1,13 +1,11 @@
 node {
-  id "vna"
+  id "webapi"
   addr {
     protocol "tcp"
     host "127.0.0.1"
-    port 9103
+    port 9101
   }
 }
 api_node_id "vnmgr"
 api_actor_name "dba"
-data_access_proxy :dba
-
-#trema_tmp "/var/run/wakame-vnet"
+data_access_proxy :direct
