--- a/vnet/spec/config/vna.conf
+++ b/vnet/spec/config/vna.conf
@@ -7,8 +7,8 @@ node {
   }
 }
 
-dba_node_id "dba"
-dba_actor_name "dba"
+api_node_id "vnmgr"
+api_actor_name "dba"
 data_access_proxy :dba
 
 trema_tmp "/var/run/wakame-vnet"
