--- a/deployment/conf_files/etc/init/vnet-vnmgr.conf
+++ b/deployment/conf_files/etc/init/vnet-vnmgr.conf
@@ -1,10 +1,10 @@
-description "Wakame-VNet: webapi"
+description "Wakame-VNet: Database agent"
 author "axsh Co."
 
 respawn
 respawn limit 5 60
 
-## rack name
+## agent name
 env NAME=vnmgr
 
 script
@@ -20,9 +20,6 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    exec bundle exec unicorn \
-     -o ${BIND_ADDR:-0.0.0.0} \
-     -p ${PORT:-9090} \
-     ./rack/config-${NAME}.ru \
+    exec bundle exec ./bin/${NAME} \
         >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
 end script
