--- a/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vnmgr.conf
@@ -3,9 +3,7 @@ node {
   addr {
     protocol "tcp"
     host "127.0.0.1"
-    port 9101
+    port 9102
   }
 }
-dba_node_id "dba"
-dba_actor_name "dba"
-data_access_proxy :direct
+actor_names %w(dba)
