Change namespaces and configurations dataaccess -> node_api node_modules/dba.rb -> node_modules/rpc.rb

--- a/deployment/conf_files/etc/wakame-vnet/vna.conf
+++ b/deployment/conf_files/etc/wakame-vnet/vna.conf
@@ -6,8 +6,8 @@ node {
     port 9103
   }
 }
-api_node_id "vnmgr"
-api_actor_name "dba"
-data_access_proxy :dba
+rpc_node_id "vnmgr"
+rpc_actor_name "rpc"
+node_api_proxy :rpc
 
 #trema_tmp "/var/run/wakame-vnet"
