--- a/deployment/conf_files/etc/wakame-vnet/webapi.conf
+++ b/deployment/conf_files/etc/wakame-vnet/webapi.conf
@@ -6,6 +6,6 @@ node {
     port 9101
   }
 }
-api_node_id "vnmgr"
-api_actor_name "dba"
-data_access_proxy :direct
+rpc_node_id "vnmgr"
+rpc_actor_name "rpc"
+node_api_proxy :direct
