--- a/vnet/spec/config/vna.conf
+++ b/vnet/spec/config/vna.conf
@@ -7,8 +7,8 @@ node {
   }
 }
 
-api_node_id "vnmgr"
-api_actor_name "dba"
-data_access_proxy :dba
+rpc_node_id "vnmgr"
+rpc_actor_name "rpc"
+node_api_proxy :rpc
 
 trema_tmp "/var/run/wakame-vnet"
