Add ipaddress gem to the gemfile

--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -6,6 +6,7 @@ gem "celluloid"
 gem "celluloid-io"
 gem "dcell"
 gem "fuguta"
+gem "ipaddress"
 gem "json"
 gem "mysql2"
 gem "net-dhcp", ">= 1.1.1"
