Add cucumber for trema build

--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -20,6 +20,8 @@ gem "sinatra-hashfix"
 gem "unicorn"
 gem "active_support"
 
+# trema and build requirement gems
+gem 'cucumber'
 gem 'paper_house'
 gem 'rant', '>= 0.5.9', :git => 'https://github.com/axsh/rant.git'
 gem 'trema', :git=>'https://github.com/axsh/trema.git', :branch=>'wakame-edge'
