--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -14,6 +14,7 @@ gem "rack"
 gem "rack-cors"
 gem "racket", ">= 1.0.12", :git => 'https://github.com/axsh/racket.git'
 gem "sequel"
+gem "sequel_paranoia"
 gem "sinatra"
 gem "sinatra-contrib"
 gem "sinatra-hashfix"
