--- a/config/base.yml
+++ b/config/base.yml
@@ -1,4 +1,4 @@
-specs: [simple, router_v2v, router_p2v, event_if]
+specs: [simple, gre, vxlan, router_v2v, router_p2v, event_if]
 vnet_branch: master
 log_level: info
 vnflows_cmd: /opt/axsh/wakame-vnet/vnctl/bin/vnflows
