The static route is set to each vm prior to the test.

--- a/config/base.yml
+++ b/config/base.yml
@@ -1,5 +1,5 @@
 #specs: [simple, vxlan, router_v2v, router_p2v, event_if]
-specs: [simple, router_v2v, router_p2v, event_if] # vxlan does not work atm
+specs: [simple, vxlan, edge, router_v2v, router_p2v, event_if] # vxlan does not work atm
 vnet_branch: master
 log_level: info
 vnflows_cmd: /opt/axsh/wakame-vnet/vnet/bin/vnflows-monitor
@@ -50,4 +50,9 @@ vms:
 legacy:
   legacy1:
     name: legacy-1
-    ssh_ip: 192.168.100.100
+    ssh_ip: 192.168.2.74
+
+# legacy_network:
+#   legacy1:
+#     ipv4: 192.168.0.0
+#     prefix: 16
