--- a/config/itest.yml
+++ b/config/itest.yml
@@ -12,6 +12,7 @@ vnet_branch: master
 update_vnet_via: rpm
 
 dataset_options:
+  edge_ipv4_address: 172.16.90.10
   dp1_ipv4_address: 172.16.90.10
   dp2_ipv4_address: 172.16.90.11
   dp3_ipv4_address: 172.16.91.10
