--- a/config/dev.yml
+++ b/config/dev.yml
@@ -1,7 +1,7 @@
 nodes:
   webapi: [192.168.2.61]
   vnmgr: [192.168.2.61]
-  vna: [192.168.2.61, 192.168.2.62, 192.168.2.63]
+  vna: [192.168.2.61, 192.168.2.62, 192.168.2.63, 192.168.2.60]
 
 webapi:
   host: 192.168.2.61
