--- a/config/itest.yml
+++ b/config/itest.yml
@@ -1,7 +1,7 @@
 nodes:
   webapi: [192.168.2.91]
   vnmgr: [192.168.2.91]
-  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93]
+  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93, 192.168.2.90]
 
 webapi:
   host: 192.168.2.91
@@ -12,7 +12,7 @@ vnet_branch: master
 update_vnet_via: rpm
 
 dataset_options:
-  edge_ipv4_address: 172.16.90.10
+  edge_ipv4_address: 172.16.90.9
   dp1_ipv4_address: 172.16.90.10
   dp2_ipv4_address: 172.16.90.11
   dp3_ipv4_address: 172.16.91.10
