--- a/config/base.yml
+++ b/config/base.yml
@@ -3,6 +3,7 @@ specs: [simple, router_v2v, router_p2v, event_if] # vxlan does not work atm
 vnet_branch: master
 log_level: info
 vnflows_cmd: /opt/axsh/wakame-vnet/vnet/bin/vnflows-monitor
+dump_flows: true
 
 vms:
   vm1:
