--- a/dataset/edge.yml
+++ b/dataset/edge.yml
@@ -164,8 +164,13 @@ datapath_networks:
     interface_uuid: if-edgeeth0
     broadcast_mac_address: "02:00:00:dd:00:02"
 
+translations:
+  - uuid: tr-edge
+    interface_uuid: if-edge
+    mode: vnet_edge
+
 vlan_translations:
   - vlan_id: 100
     network_id: 2
-    interface_uuid: if-edge
+    interface_uuid: tr-edge
 
