Changed interface entry to translation in vlan_translations.

--- a/dataset/edge.yml
+++ b/dataset/edge.yml
@@ -172,5 +172,5 @@ translations:
 vlan_translations:
   - vlan_id: 100
     network_id: 2
-    interface_uuid: tr-edge
+    translation_uuid: tr-edge
 
