--- a/config/base.yml
+++ b/config/base.yml
@@ -1,4 +1,4 @@
-specs: [edge, simple, router_v2v, router_p2v, event secg]
+specs: [edge, simple, router_v2v, router_p2v, event, secg]
 vnet_branch: master
 log_level: info
 vnflows_cmd: /opt/axsh/wakame-vnet/vnet/bin/vnflows-monitor
