Change `display_name` into `type`

--- a/dataset/edge.yml
+++ b/dataset/edge.yml
@@ -92,15 +92,15 @@ network_services:
 
   - uuid: ns-dhcppub
     interface_uuid: if-dhcppub
-    display_name: dhcp
+    type: dhcp
 
   - uuid: ns-dhcp1
     interface_uuid: if-dhcp1
-    display_name: dhcp
+    type: dhcp
 
   - uuid: ns-dhcp2
     interface_uuid: if-dhcp2
-    display_name: dhcp
+    type: dhcp
 
 datapath_networks:
 
