--- a/dataset/router_p2v.yml
+++ b/dataset/router_p2v.yml
@@ -69,12 +69,14 @@ interfaces:
     mac_address: "02:00:00:00:02:01"
     ipv4_address: 10.101.0.1
     mode: simulated
+    enable_routing: true
 
   - uuid: if-router2
     network_uuid: nw-vnet2
     mac_address: "02:00:00:00:02:02"
     ipv4_address: 10.102.0.1
     mode: simulated
+    enable_routing: true
 
   - uuid: if-routerp2v
     network_uuid: nw-public
@@ -82,6 +84,7 @@ interfaces:
     ipv4_address: <%= public_router_ipv4_address  %>
     owner_datapath_uuid: dp-1
     mode: simulated
+    enable_routing: true
 
 network_services:
 
