--- a/deployment/conf_files/etc/init/vnet-vnmgr.conf
+++ b/deployment/conf_files/etc/init/vnet-vnmgr.conf
@@ -9,6 +9,7 @@ env NAME=vnmgr
 
 script
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
+    export LOG_DIRECTORY
 
     [ -d "${LOG_DIRECTORY}" ] || {
       mkdir ${LOG_DIRECTORY}
