--- a/vnet/Rakefile
+++ b/vnet/Rakefile
@@ -19,6 +19,10 @@ def connect(config)
   Sequel.connect(config.db_uri)
 end
 
+def load_config(config_dir)
+  Dir.exists?(config_dir) ? Vnet::Configurations::Vnmgr.load(File.join(config_dir, "common.conf"), File.join(config_dir, "vnmgr.conf")) : nil
+end
+
 def migrate(config, to = nil)
   Sequel.extension :migration
   connect(config)
@@ -44,7 +48,7 @@ def mysql_opts(config)
 end
 
 namespace :db do
-  config = Vnet::Configurations::Vnmgr.conf
+  config = load_config("/etc/wakame-vnet/")
   # deprecated
   task :init => [] do
     migrate(config)
@@ -79,9 +83,7 @@ namespace :db do
 end
 
 namespace :test do
-  config_dir = "spec/config/"
-  config = Dir.exists?(config_dir) ? Vnet::Configurations::Vnmgr.load(File.join(config_dir, "common.conf"), File.join(config_dir, "vnmgr.conf")) : nil
-
+  config = load_config("spec/config/")
   namespace :db do
     # deprecated
     task :init => [] do
