--- a/vnet/Rakefile
+++ b/vnet/Rakefile
@@ -20,7 +20,7 @@ def connect(config)
 end
 
 def load_config(config_dir)
-  Dir.exists?(config_dir) ? Vnet::Configurations::Vnmgr.load(File.join(config_dir, "common.conf"), File.join(config_dir, "vnmgr.conf")) : nil
+  Dir.exists?(config_dir) ? Vnet::Configurations::Vnmgr.load(File.join(config_dir, "common.conf"), File.join(config_dir, "vnmgr.conf")) : Vnet::Configurations::Vnmgr.load
 end
 
 def migrate(config, to = nil)
@@ -48,7 +48,7 @@ def mysql_opts(config)
 end
 
 namespace :db do
-  config = load_config("/etc/wakame-vnet/")
+  config = load_config("/etc/openvnet/")
   # deprecated
   task :init => [] do
     migrate(config)
