--- a/dataset/router_v2v.yml
+++ b/dataset/router_v2v.yml
@@ -73,7 +73,7 @@ interfaces:
     enable_routing: true
 
   - uuid: if-routerpub
-    network_uuid: nw-public
+    network_uuid: nw-public1
     mac_address: "02:00:00:00:02:11"
     ipv4_address: <%= public_router_ipv4_address  %>
     mode: simulated
